--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.openengsb.connector</groupId>
     <artifactId>openengsb-connector-parent</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.5.0</version>
   </parent>
 
   <properties>
@@ -33,7 +33,7 @@
     <bundle.namespace>org.openengsb.connector.mavendep</bundle.namespace>
     <commons.compress.version>1.3</commons.compress.version>
     <jsch.wrapped.version>0.1.42.w1</jsch.wrapped.version>
-    <openengsb.compile.version>2.5.0-SNAPSHOT</openengsb.compile.version>
+    <openengsb.compile.version>2.5.0</openengsb.compile.version>
     <openengsb.domain.version>1.0.0-SNAPSHOT</openengsb.domain.version>
     <openengsb.domain.range>[1.0,2)</openengsb.domain.range>
   </properties>
